[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentworks"
version = "0.1.0"
description = "通用 Agent 开发框架 — 基于 LangGraph + Loop Engineering 四阶段循环 + Deep Agents Harness 中间件栈"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "AgentWorks Team"},
]

dependencies = [
    # ── LangGraph 生态 ──
    "langgraph>=0.2.0",
    "langgraph-checkpoint-sqlite>=3.0",
    # ── Harness 基础层 ──
    "deepagents>=0.1.0",
    # ── LLM 网关 ──
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.3.0",
    # ── 数据库驱动 ──
    "aiosqlite>=0.20.0",
    # ── 数据校验与配置管理 ──
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    # ── 上下文管理辅助 ──
    "tiktoken>=0.7.0",
    # ── 可观测性 ──
    "langsmith>=0.1.0",
    # ── YAML 配置解析 ──
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]

[project.scripts]
agentworks = "agentworks.cli.main:main"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "ANN", # flake8-annotations
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
